# auto-art

./: .gitignore  CODEBASE_ANALYSIS_REPORT.md  DETAILED_OVERVIEW.md  Dockerfile  Dockerfile.gpu  FIXES_SUMMARY.md  README.md  VERIFICATION_REPORT.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  setup.py
.github/agents/: Beast.md
.github/workflows/: auto_art_ci.yml
auto_art/: __init__.py
auto_art/api/: __init__.py  app.py
auto_art/cli/: __init__.py  main.py
auto_art/config/: __init__.py  manager.py
auto_art/core/: __init__.py  adaptive.py  base.py  compliance.py  dashboard.py  evaluator.py  gradient_masking.py  harmbench.py  interfaces.py  model_card.py  monitoring.py  orchestrator.py  parallel.py  plugins.py  registry.py  robustbench.py  storage.py  warmstart.py
auto_art/core/analysis/: __init__.py  model_analyzer.py
auto_art/core/attacks/: __init__.py  attack_generator.py
auto_art/core/evaluation/: __init__.py  art_evaluator.py  art_evaluator_py_combined_changes.py  art_evaluator_py_sec_score.py  guardrails.py  observers.py  (+2 more)
auto_art/implementations/: __init__.py
auto_art/utils/: __init__.py  common.py  logging.py  validation.py
docs/: README.md  api-reference.md  architecture.md  configuration.md  getting-started.md  telemetry.md
docs/attacks/: README.md  agentic.md  evasion.md  extraction.md  inference.md  llm.md  nlp.md  poisoning.md
docs/automation/: adaptive.md  ci-cd.md  orchestrator.md  owasp-mapping.md  parallel.md  red-teaming.md  warmstart.md
docs/compliance/: eu-ai-act.md  nist.md  owasp.md
docs/defences/: README.md  agentic.md  art-wrappers.md  certification.md  guardrails.md  preprocessors.md  training.md
docs/metrics/: gradient-masking.md  multi-norm.md  privacy.md  rdi.md
docs/production/: monitoring.md  supply-chain.md
tests/: __init__.py
tests/api/: test_app.py
tests/e2e/: test_evaluation_pipeline.py
tests/integration/: __init__.py  llm_client.py  test_analyzer_and_factory.py  test_attack_generator.py  test_llm_attacks_live.py
tests/pipeline/: __init__.py  test_evaluation_flow.py
tests/unit/: __init__.py  test_adaptive.py  test_agent_tracer.py  test_agentic_advanced.py  test_agentic_attacks.py  test_art_evaluator.py  test_blackbox_attacks.py  test_certification.py  test_circuit_breaker.py  test_compliance.py  test_compliance_extended.py  test_config_manager.py  test_cost_tracker.py  test_dashboard.py  test_evasion_attack_wrapper.py  test_extraction_attack_wrapper.py  test_fairness.py  test_gradient_masking.py  test_guardrails.py  test_harmbench.py  test_in_context_defence.py  test_inference_attack_wrapper.py  test_input_sanitizer.py  test_keras_handler.py  test_llm_attack_wrapper.py  test_llm_attacks.py  test_metrics_calculator.py  test_model_analyzer.py  test_model_card.py  test_model_factory.py  test_monitoring.py  test_multi_norm.py  test_nlp_attacks.py  test_orchestrator.py  test_owasp_mapping.py  test_parallel.py  test_plugins.py  test_poison_detectors.py  test_poisoning_attack_wrapper.py  test_postprocessor_defences.py  (+15 more)
(+131 files in other folders)
