[project]
name = "auto-art"
version = "0.4.0"
description = "Automated Adversarial Robustness Testing Framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Auto-ART Team" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "adversarial-robustness-toolbox>=1.20.0,<2.0.0",
    "scikit-learn>=1.2.0,<2.0.0",
    "opencv-python>=4.8.0,<5.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "pandas>=2.0.0,<3.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "pyyaml>=6.0,<7.0.0",
    "flask>=3.0.0,<4.0.0",
    "click>=8.1.0,<9.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.scripts]
auto-art = "auto_art.cli.main:main"

[project.optional-dependencies]
pytorch = ["torch>=2.0.0,<3.0.0"]
tensorflow = ["tensorflow>=2.14.0,<3.0.0"]
all-frameworks = [
    "torch>=2.0.0,<3.0.0",
    "tensorflow>=2.14.0,<3.0.0",
]
agentic = [
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=5.0.0,<6.0.0",
]
telemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-logging>=0.41b0",
]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0,<2.0.0",
]
security = [
    "bandit>=1.7.0,<2.0.0",
    "safety>=3.0.0,<4.0.0",
]
api = [
    "redis>=5.0.0,<6.0.0",
    "pyjwt>=2.8.0,<3.0.0",
]
testing = [
    "hypothesis>=6.100.0,<7.0.0",
    "pytest-snapshot>=0.9.0",
]

[project.urls]
Repository = "https://github.com/auto-art/auto-art"
Documentation = "https://auto-art.readthedocs.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auto_art"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0,<2.0.0",
]

[tool.ruff]
target-version = "py39"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "B905"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["auto_art"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
